--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
   </div>
 </nav>
 <section class="mb-6 py-5 text-center">
-  <div class="container text-center  align-items-center ">
+  <div class="container mx-auto text-center  align-items-center ">
     <div class="text text-center">
-      <p class="text-primary fw-semibold mb-2">1% OF THE INDUSTRY</p>
-      <h2 class="hype display-5 fw-bold mb-3 text-break mx-auto" >Hype got you here. Stay for the support.</h2>
+      <p class="text-primary fw-semibold fs-6">1% OF THE INDUSTRY</p>
+      <h2 class="hype display-5 fw-bold mb-3 text-break mx-auto " >Hype got you here. Stay for the support.</h2>
     </div>
   </div>
 </section>
@@ -58,9 +58,8 @@
   <div class="container">
     <div class="row align-items-center gx-5">
 
-      <!-- النص -->
       <div class="col-md-6 mb-4 mb-md-0">
-        <h2 class="first fw-bold mb-3">
+        <h2 class="fw-bold mb-3">
           Welcome to your new digital reality that will rock your world.
         </h2>
         <p class="second mb-0">
@@ -70,7 +69,7 @@
       </div>
 
       <div class="col-md-6">
-        <form class="d-flex py-1">
+        <form class="d-flex py-1 col-md-9 w-100">
           <input type="email" class="form-control rounded-0 rounded-start py-2" placeholder="Enter your email">
           <button type="submit" class="btn btn-primary rounded-0 rounded-end">Submit</button>
           
@@ -86,19 +85,23 @@
       <div class="container">
         <div class="row gx-5 align-items-stretch">
 
-          <div class="col-lg-8 d-flex flex-column mb-4">
+          <div class="col-md-7 d-flex flex-column mb-4">
             <div class="bg-white p-4 rounded shadow-sm h-100 d-flex flex-column">
-              <img src="./assets/imgs/Tooltip.png" class="img-fluid mb-3 rounded shadow-sm" alt="Main Post" />
+              <picture>
+              <img src="./assets/imgs/Tooltip.png" class="img-fluid h-100 w-100 object-fit-cover mb-3 rounded shadow-sm" alt="Main Post" />
+              </picture>
               <h2 class="h3 fw-bold mb-2">Reach your users with new tools. Reach your users with new tools. Reach your users with new tools.</h2>
               <p class="text-muted">Efficiently unleash cross-media information without cross-media value. Quickly maximize.</p>
               <p class="text-muted small mt-auto">25 Apr 2022</p>
             </div>
           </div>
 
-          <div class="col-lg-4 d-flex flex-column mb-4">
+          <div class="col-lg-5 d-flex flex-column mb-4">
             <div class="bg-white p-4 rounded shadow-sm h-100">
               <div class="d-flex mb-4">
-                <img src="./assets/imgs/Container.png" class="me-3 rounded post shadow-sm"   alt="Post" />
+                <picture>
+                <img src="./assets/imgs/Container.png" class="me-3 rounded post shadow-sm img-fluid h-100 w-100 object-fit-cover rounded"   alt="Post" />
+                </picture>
                 <div>
                   <h2 class="h6 fw-bold mb-1">Reach your users with new tools</h2>
                   <p class="text-muted small mb-1">Efficiently unleash cross-media information without cross-media value.</p>
@@ -106,7 +109,9 @@
                 </div>
               </div>
               <div class="d-flex mb-4">
-                <img src="./assets/imgs/Container (1).png" class="me-3 rounded post shadow-sm" alt="Post" />
+                <picture>
+                <img src="./assets/imgs/Container (1).png" class="me-3 rounded post shadow-sm img-fluid h-100 w-100 object-fit-cover rounded" alt="Post" />
+                </picture>
                 <div>
                   <h2 class="h6 fw-bold mb-1">Faster ways to reach your customer</h2>
                   <p class="text-muted small mb-1">Completely synergize resource taxing relationships via premier niche markets.</p>
@@ -114,7 +119,9 @@
                 </div>
               </div>
               <div class="d-flex">
-                <img src="./assets/imgs/Container (2).png" class="me-3 rounded post shadow-sm"  alt="Post" />
+                <picture>
+                <img src="./assets/imgs/Container (2).png" class="me-3 rounded post shadow-sm img-fluid h-100 w-100 object-fit-cover rounded"  alt="Post" />
+                </picture>
                 <div>
                   <h2 class="h6 fw-bold mb-1">Revolutionizing the Design Industry</h2>
                   <p class="text-muted small mb-1">Efficiently unleash cross-media information without cross-media value.</p>
@@ -130,7 +137,7 @@
 
     <div class="mb-4 container blog-cards-container">
       <h2 class="text-center section-title blog-title">Latest Blog Posts</h2>
-      <div class="row row-cols-1 row-cols-md-3 g-4 mt-3">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-3">
         <div class="col">
           <div class="card h-100 shadow">
             <img
@@ -254,10 +261,10 @@
         <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
   <div class="carousel-item active">
-    <div class="d-flex align-items-center justify-content-center min-vh-100">
-      <div class="text-center container">
+    <div class="d-flex align-items-center justify-content-center min-vh-100  ">
+      <div class="text-center container mx-auto">
         <p class="text-primary fw-semibold text-white">1% OF THE INDUSTRY</p>
-        <h2 class="display-5 fw-bold text-white">
+        <h2 class=" display-3 fw-bold text-white">
           Welcome to your new digital reality that which will rock your world truly at all.
         </h2>
         <button class="btn bg-white btn-sm mt-3" data-bs-toggle="modal" data-bs-target="#loginModal">Sign Up</button>
