--- a/index.html
+++ b/index.html
@@ -140,11 +140,9 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-3">
         <div class="col">
           <div class="card h-100 shadow">
-            <img
-              src="./assets/imgs/Rectangle 1.png"
-              class="card-img-top"
-              alt="..."
-            />
+            <picture>
+            <img src="./assets/imgs/Rectangle 1.png" class="card-img-top img-fluid h-100 w-100 object-fit-cover" alt="..."/>
+            </picture>
             <div class="card-body">
               <p class="text-muted small">25 Apr 2022</p>
               <h3 class="h5 fw-bold card-title">
@@ -159,11 +157,9 @@
 
         <div class="col">
           <div class="card h-100 shadow">
-            <img
-              src="./assets/imgs/Rectangle 1 (1).png"
-              class="card-img-top"
-              alt="..."
-            />
+            <picture>
+            <img src="./assets/imgs/Rectangle 1 (1).png" class="card-img-top img-fluid h-100 w-100 object-fit-cover" alt="..."/>
+            </picture>
             <div class="card-body">
               <p class="text-muted small">25 Apr 2022</p>
               <h3 class="h5 fw-bold card-title">
@@ -178,11 +174,9 @@
 
         <div class="col">
           <div class="card h-100 shadow">
-            <img
-              src="./assets/imgs/Rectangle 1 (2).png"
-              class="card-img-top"
-              alt="..."
-            />
+            <picture>
+            <img src="./assets/imgs/Rectangle 1 (2).png" class="card-img-top img-fluid h-100 w-100 object-fit-cover" alt="..."/>
+            </picture>
             <div class="card-body">
               <p class="text-muted small">25 Apr 2022</p>
               <h3 class="h5 fw-bold card-title">
@@ -198,11 +192,9 @@
 
         <div class="col">
           <div class="card h-100 shadow">
-            <img
-              src="./assets/imgs/Rectangle 1 (3).png"
-              class="card-img-top"
-              alt="..."
-            />
+            <picture>
+            <img src="./assets/imgs/Rectangle 1 (3).png" class="card-img-top img-fluid h-100 w-100 object-fit-cover" alt="..."/>
+            </picture>
             <div class="card-body">
               <p class="text-muted small">25 Apr 2022</p>
               <h3 class="h5 fw-bold card-title">
@@ -217,11 +209,9 @@
 
         <div class="col">
           <div class="card h-100 shadow">
-            <img
-              src="./assets/imgs/Rectangle 1 (4).png"
-              class="card-img-top"
-              alt="..."
-            />
+            <picture>
+            <img src="./assets/imgs/Rectangle 1 (4).png" class="card-img-top img-fluid h-100 w-100 object-fit-cover" alt="..."/>
+            </picture>
             <div class="card-body">
               <p class="text-muted small">25 Apr 2022</p>
               <h3 class="h5 fw-bold card-title">
@@ -236,11 +226,9 @@
 
         <div class="col">
           <div class="card h-100 shadow">
-            <img
-              src="./assets/imgs/Rectangle 1 (5).png"
-              class="card-img-top"
-              alt="..."
-            />
+            <picture>
+            <img src="./assets/imgs/Rectangle 1 (5).png" class="card-img-top img-fluid h-100 w-100 object-fit-cover" alt="..."/>
+            </picture>
             <div class="card-body">
               <p class="text-muted small">25 Apr 2022</p>
               <h3 class=" h5 fw-bold card-title">
