--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <nav class="shadow px-6 py-6 navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="shadow px-6 py-6 navbar navbar-expand-md bg-body-tertiary">
         <div class="container">
           <a class="navbar-brand" href="#"
             ><img src="./assets/imgs/Lookscout.png" alt=""
@@ -81,18 +81,18 @@
           <div class="text text-center">
             <p class="text-primary fw-semibold fs-7">1% OF THE INDUSTRY</p>
             <h2 class="hype display-5 fw-bold mb-3 text-break mx-auto">
-              Hype got you here. Stay for the support.
+              Hype got you here. of it. Stay for best ever help.
             </h2>
           </div>
         </div>
       </section>
-      <div class="responsive">
+      <div class="responsive d-flex flex-column flex-md-column">
         <section
-          class="Subscribe py-5 bg text-white text-center text-md-start bg-primary"
+          class="Subscribe py-5 bg text-white text-center text-md-start bg-primary order-2 order-md-1"
         >
-          <div class="container">
-            <div class="row align-items-center gx-5">
-              <div class="col-12 col-md-6 mb-4 mb-md-0">
+          <div class="container ">
+            <div class="row align-items-center gx-5 d-flex justify-content-between">
+              <div class="col-12 col-md-5 mb-4 mb-md-0">
                 <h2 class="fw-bold mb-3">
                   Welcome to your new digital reality that will rock your world.
                 </h2>
@@ -103,7 +103,7 @@
                 </p>
               </div>
 
-              <div class="col-12 col-md-6">
+              <div class="col-12 col-md-5 ">
                 <form class="newsletter-form mx-auto mx-md-0">
                   <input
                     type="email"
@@ -122,7 +122,7 @@
           </div>
         </section>
 
-        <section class="my-4 py-5">
+        <section class="my-4 py-5 order-1 order-md-2">
           <div class="container">
             <div
               class="row gx-5 align-items-stretch justify-content-center blog-section-layout"
@@ -152,8 +152,8 @@
               </div>
 
 
-              <div class="side-posts d-flex flex-column gap-5 mt-4">
-                <div class="d-flex small-post align-items-start">
+              <div class="side-posts d-flex flex-column gap-5 ">
+                <div class="d-flex small-post align-items-start mt-4">
                   <picture>
                     <img
                       src="./assets/imgs/Container.png"
